2002-10-22  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-albumdb-refactor-branch-b1

	* Integrated Jesse Mullan's albumdb refactoring code in a separate
	  branch.  This code separates out the information about each photo
	  from the album metadata which allows us to load much less data into
	  memory when we load an album.  This will speed up cross-album
	  operations and use less memory (yay Jesse!)

2002-10-18  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b14

	* Enhanced the config wizard to behave reasonably when open_basedir is
	  on.  Specifically I improved it so that it doesn't spit out endless
	  warnings by trying to stat files that are not in the open_basedir list.

2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b13

	* Changed php_flag to php_value in the config wizard code.
	  The PHP website claims that php_flag is legitimate, but some versions
	  of PHP don't support it.  

2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b12

	* Added .swf (Shockwave) as an acceptable movie format

	* SECURITY: remove tags from the login name and password on the
	  login page to protect against cross-site-scripting attacks.
	  Thanks to Bryan Burns for the tip.

2002-09-27  Tim Miller  <tim_miller@users.sourceforge.net> 1.3.2-cvs-b11

        * Added gallery_remote2.php and supporting files, which implement
	  the first release of the new Gallery Remote protocol,
	  to be used with GR 1.0-b9 and later.

2002-09-27  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b10

	* Fixed a bug in the comment code that caused the IP not to appear
	  when register_globals is off

	* Changed the comment display code so that it only shows the IP to
	  administrators. 

2002-09-23  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b9

	* Overhauled the UPGRADING document; it was getting pretty confusing

	* Rolled in Sammy Spets' "can view full images" permission patch

	* Changed the captionator to only require canChangeTextOfAlbum