@@ -1,3 +1,8 @@
+2002-10-30  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-albumdb-refactor-branch-b2
+
+	* Minor tweak: if the full name is empty, display the username in the
+	  "Welcome, xxx" message on albums.php
+
 2002-10-22  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-albumdb-refactor-branch-b1
 
 	* Integrated Jesse Mullan's albumdb refactoring code in a separate
